--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -18,5 +18,14 @@
         "react"
     ],
     "rules": {
+        "react/jsx-filename-extension": [
+            1,
+            {
+                "extensions": [
+                    ".js",
+                    ".jsx"
+                ]
+            }
+        ]
     }
 }
